Add jwt filtering(only for POST requests); add more security configuration